--- a/Valentinstag/css/styles.css
+++ b/Valentinstag/css/styles.css
@@ -27,12 +27,13 @@ h1 {
 .animation {
   width: 200px;
   margin: 20px 0;
+  margin-left: -15%; /* Container weiter nach links verschieben */
 }
 
 button {
   font-size: 20px;
   padding: 10px 20px;
-  margin: 10px;
+  margin: 5px; /* Verringere den Margin-Wert, um die Buttons höher zu positionieren */
   border: none;
   border-radius: 20px;
   cursor: pointer;
