Beschreibung der Änderungen

--- a/Valentinstag/css/styles.css
+++ b/Valentinstag/css/styles.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  position: relative;
 }
 
 .container {
@@ -28,7 +29,7 @@ h1 {
   width: 200px;
   margin: 20px 0;
   margin-left: -15%;
-  }
+}
 
 button {
   font-size: 20px;
@@ -40,6 +41,28 @@ button {
   transition: transform 0.3s ease, background-color 0.3s ease;
   top: -30px;
 }
+
+.heart-image {
+  position: absolute;
+  width: 150px; /* Größere Herzen */
+  height: 150px;
+  object-fit: cover;
+  mask-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M12 21s-6.93-5.36-10.92-9.39a6 6 0 0 1 .21-8.64A6.06 6.06 0 0 1 9 3a6.06 6.06 0 0 1 7.71 0 6 6 0 0 1 .21 8.64C18.93 15.64 12 21 12 21z'/></svg>");
+  mask-size: cover;
+  -webkit-mask-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M12 21s-6.93-5.36-10.92-9.39a6 6 0 0 1 .21-8.64A6.06 6.06 0 0 1 9 3a6.06 6.06 0 0 1 7.71 0 6 6 0 0 1 .21 8.64C18.93 15.64 12 21 12 21z'/></svg>");
+  -webkit-mask-size: cover;
+  z-index: -1;
+  pointer-events: none; /* Verhindert Interaktion mit den Bildern */
+}
+
+.heart-image:nth-child(1) { top: 5%; left: 5%; }  /* Position des ersten Herzens */
+.heart-image:nth-child(2) { top: 5%; left: 40%; } /* Position des zweiten Herzens */
+.heart-image:nth-child(3) { top: 5%; left: 75%; } /* Position des dritten Herzens */
+.heart-image:nth-child(4) { top: 50%; left: 10%; } /* Position des vierten Herzens */
+.heart-image:nth-child(5) { top: 50%; left: 45%; } /* Position des fünften Herzens */
+.heart-image:nth-child(6) { top: 50%; left: 80%; } /* Position des sechsten Herzens */
+.heart-image:nth-child(7) { top: 85%; left: 25%; } /* Position des siebten Herzens */
+
 
 button:hover {
   transform: scale(1.1);
